<resources>
    <string name="app_name">My Grocery App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category">category</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">new products</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_val">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_price_val">Product Price</string>
    <string name="total_price_val">Total Price</string>
    <string name="total_price" />
    <string name="total_price_">Total Price</string>
    <string name="total_price_value">Total Price</string>
    <string name="total_quantity">Total quantity</string>
    <string name="total_quantity_value">Total quantity</string>
    <string name="your_cart_is_empty">your cart is empty!</string>
    <string name="total_price_300l_e">Total Price: 300L.E</string>
    <string name="checkout">Checkout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="order_is_done_successfully">Order is Done Successfully!</string>
    <string name="image_successful">image_successful</string>
    <string name="image_description">image_description</string>
    <string name="price_22_l_e">Price: 22 L.E</string>
    <string name="description">Description</string>
    <string name="milk_is_the_liquid_produced_by_the_mammary_glands_of_mammals_including_humans_breast_milk_is_the_preferred_food_for_infants_as_it_is_well_tolerated_while_their_digestive_tracts_develop_and_mature_dairy_milk_may_be_introduced_at_later_ages_if_tolerated_well">Milk is the liquid produced by the mammary glands of mammals, including humans. Breast milk is the preferred food for infants, as it is well-tolerated while their digestive tracts develop and mature. Dairy milk may be introduced at later ages if tolerated well.</string>
    <string name="desc">milk_is_the_liquid_produced_by_the_mammary_glands_of_mammals_including_humans_breast_milk_is_the_preferred_food_for_infants_as_it_is_well_tolerated_while_their_digestive_tracts_develop_and_mature_dairy_milk_may_be_introduced_at_later_ages_if_tolerated_well</string>
    <string name="image_increment">image_increment</string>
    <string name="_1">1</string>
    <string name="image_decrement">image_decrement</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="image_sign">image_sign</string>
    <string name="email_sign">Email</string>
    <string name="password_sign">Password</string>
    <string name="name">Name</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="log_in_tv">Log in</string>
    <string name="image_delete">image_delete</string>
    <string name="image_category">image_category</string>
    <string name="name_category">Name</string>
    <string name="product_price_category">Product Price</string>
    <string name="iv_inc">iv_inc</string>
    <string name="_1_count">1</string>
    <string name="iv_dec">iv_dec</string>
    <string name="buy_now">Buy now</string>
    <string name="discount">Discount:</string>
    <string name="_30_off">30% off</string>
    <string name="iv_arrow">image_arrow</string>
    <string name="search_your_item_here">Search your item here...</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="view_all_category">View All</string>
    <string name="recommended">Recommended</string>
    <string name="view_all_recommended">View All</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_address">Your Address</string>
    <string name="update">Update</string>
    <string name="image">image</string>
    <string name="milk">Milk</string>
    <string name="fresh_fruit">Fresh Fruit</string>
    <string name="number">1</string>
    <string name="username">username</string>
</resources>