<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    tools:context=".ui.home.HomeFragment">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<EditText
    android:id="@+id/et_search"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="50dp"
    android:elevation="10dp"
    android:hint="@string/search_your_item_here"
    android:drawableStart="@drawable/ic_baseline_search_24"
    android:drawablePadding="10dp"
    android:background="@drawable/edit_text_bg"
    android:inputType="text"
    android:importantForAutofill="no"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_search"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/et_search"
          app:layout_constraintBottom_toTopOf="@id/tv_popular"/>

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_products"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/rv_search"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_popular"
        app:layout_constraintBottom_toBottomOf="@id/tv_popular"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/first_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_popular"
        app:layout_constraintBottom_toTopOf="@id/tv_explore"
        app:layout_constraintStart_toStartOf="parent "/>
    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_categories"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/first_rv"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_category"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_explore"
        app:layout_constraintBottom_toBottomOf="@id/tv_explore"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sec_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_recommended"
        app:layout_constraintTop_toBottomOf="@id/tv_explore"
        app:layout_constraintStart_toStartOf="parent "/>
    <TextView
        android:id="@+id/tv_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/sec_rv"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_recommended"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_recommended"
        app:layout_constraintBottom_toBottomOf="@id/tv_recommended"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/third_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_recommended"
        app:layout_constraintStart_toStartOf="parent "/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>